Fix font awesome icons not showing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -228,7 +228,7 @@ section.search .region_list .region:hover {
 section.countries .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 40px;
+  gap: 70px;
 }
 .card,
 .card.details {
